infra/k8s/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-api
  labels:
    app: cache-api 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache-api
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: cache-api
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: cache-api
        image: ghcr.io/ahmedalhulaibi/cache-api:v0.0.9
        ports:
        - containerPort: 8080
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: cache-api-svc
  labels:
    run: cache-api
spec:
  type: ClusterIP
  ports:
  - name: http
    targetPort: 8080
    port: 8080
    protocol: TCP
  - name: grpc
    targetPort: 8090
    port: 8090
    protocol: TCP
  selector:
    app: cache-api
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cache-api-ir
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`cache-api.dev`, `cache-api.127.0.0.1.nip.io`)
    kind: Rule
    services:
    - name: cache-api-svc
      port: 8080
    middlewares:
    - name: cache-api-http-l5d-dst-override
  - match: PathPrefix(`/cache-api`)
    kind: Rule
    services:
    - name: cache-api-svc
      port: 8080
    middlewares:
    - name: cache-api-stripprefix
    - name: cache-api-http-l5d-dst-override
  - match: Headers(`content-type`,`application/grpc`)
    kind: Rule
    services:
    - name: cache-api-svc
      port: 8090
      scheme: h2c
    middlewares:
    - name: cache-api-grpc-l5d-dst-override
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cache-api-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /cache-api
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cache-api-http-l5d-dst-override
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "cache-api-svc.default.svc.cluster.local:8080"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cache-api-grpc-l5d-dst-override
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "cache-api-svc.default.svc.cluster.local:8090"
